@@ -2,17 +2,17 @@
 Hash: SHA1
 
 AUX 50notmuch-gentoo.el 291 RMD160 7e036b8700f50cde6c3b27622193ddf08812229b SHA1 cc087fe76f750e84171a6ddef9dc10139b8450cc SHA256 68c0ecfd3d10246fb65ec48b097c1b477ce33f44014f602f903c16b752ba7d3b
-EBUILD notmuch-9999.ebuild 2692 RMD160 7ea1b68a165907403372f17de46f690764025946 SHA1 213012147ad8b78d3ea601183c977d5b216baa3d SHA256 2e6e3c9bf01f1d8c1f4fbc8a87de2d070eb1816bb8f29dc31896872477ec3cdc
-MISC ChangeLog 1483 RMD160 29b2ee9b549c3e59d5c9fd2d8ba036b02f04b11b SHA1 df1f4bd226b69a21de54a5668b280317197e731f SHA256 d5aaaf7109ff700fb67964e9b81faeed0e640fc2b16d937e5cd0321841059fc5
+EBUILD notmuch-9999.ebuild 2799 RMD160 7d455fa7097f2fa71aafa2f6fe0d1ea51f15723d SHA1 e02b026188329536592912553976da26ef095723 SHA256 773191c31e63dcd3d0bb596a2d3aa62cc9b79800c2fe564c2a17b08a15fb0698
+MISC ChangeLog 1607 RMD160 fb3ed3adb6de6b018c16a23f79551694bc477a5f SHA1 57bc23c3e4194e507ac8eec0eb950c79bcdd3775 SHA256 b042b504eeef1d9fd592feeba6c5bd1b2c27505b75dcd64cc7e4f798575d862e
 MISC metadata.xml 1003 RMD160 12fa19220fd58eade62c7aafc6a3c2bf5adb6ca5 SHA1 8be789b19b3140dc24694d5c535a7d8a4e8c4b0a SHA256 48f0e1b14cf9bd31f53f6bb481570ec1f067308e067913edbcea50a986b875bc
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPaIOSAAoJEPATRTHh2/q1b0EIAJndzsxSQ8VhDgYN4cQ5qrzU
-+OJ7USDUEuHIlBO4lfQXCVTbow8fjsZjEI/+gpIBAKTWP0yZ67TwXeOoHgnweoAJ
-/8y9XpAzxIp1ItOHRf3QFJ+/V0n1Yzcu3A0NHZM2ffpK5k6iWLy4x6ZXnCJjnm8G
-ppnNywN5mwiAfgICrQdwjcj8RfSy4mWOoKM6VU3BYBQ4uSfQlGEaaymz+E63vCJM
-LEL0hKuDvw9qal8h04B+kINgf810WQSyjXMG+gJdAigIXvjt11kM75LvQJnsbTE3
-bIlJBX6wx2mKx/1amTSZogpQeZYl2mRfAi0pfw82mANxJ2FUieDxLWsYUW3Z7Fk=
-=ajM0
+iQEcBAEBAgAGBQJPq4q8AAoJEPATRTHh2/q1ZMoH/jykO51YW0juxuQmIScXZp57
+pUMpwPg+CtrYKAj2OFgZJEQcAuOA2mMRk9pmUMJ0PFv2YXwHq0g6IB11mQxL08aH
+pmVrmuo7J2H9i3qbLb8cYs7DFUTvkVfCXlR8l0BDZBhVM9TSWoc1KNhgX2XhZpPA
+RWs3WNdEapjNlvwLixp+DNlx3CkJ45A/RKIamXIsmQA6QYbPR8xej8RF6F8w40sN
+H5ofOVPbhr4tuAjOjXiG/hTO9/6nap+b74Iq4nUdsso5MfI7o0bc1/6dsvSfvPkk
+kir/4/Yr4dTgIuEdq6hgcUGUx6WaEFK6hE28CCa4ZfMBqU6zyZoPQYs7mGzlKKU=
+=q3kp
 -----END PGP SIGNATURE-----
